# bosca-ts

./: .env-dev  .env-uploader-dev  .eslintrc.js  .gitignore  .gitmodules  .npmrc  Dockerfile  Dockerfile-backend-core  Dockerfile-backend-llamaindex  Dockerfile-migration  README.md  buf.gen.yaml  buf.yaml  cli  docker-compose.yaml  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vitest.workspace.ts
.run/: AI gRPC.run.xml  AI.run.xml  Bible GraphQL Server.run.xml  Bible Worker.run.xml  Bible Workflow Worker.run.xml  Content Server.run.xml  Content Service.run.xml  Dev.run.xml  GraphQL Server.run.xml  Metadata Worker.run.xml  Metadata Workflow Worker.run.xml  Search Service.run.xml  Search Worker.run.xml  Text Extractor Worker.run.xml  Upload Server.run.xml  Uploader Service.run.xml  Uploader.run.xml  Vectorizer.run.xml  Workflow Coordinator.run.xml  Workflow Dashboard.run.xml  Workflow Queue.run.xml  Workflow Server.run.xml  Workflow Service.run.xml  Workflow Worker.run.xml  Workflow Workers.run.xml  bosca-ui _ dev.run.xml
ai/: process.py  requirements.txt
api/: go.mod  go.sum
backend/: go.mod  go.sum  package-lock.json  package.json  tsconfig.json
backend.core/: README.md  go.mod  go.sum
backend.llamaindex/: pyproject.toml
backend.llamaindex/api/: ai.py  search.py
backend.llamaindex/registry/: registry.py
backend.llamaindex/servers/: ai.py  search.py
backend.llamaindex/services/: channel.py
backend.llamaindex/util/: chat_context.py  chat_context_factory.py  download.py  initialize_llm.py
backend.llamaindex/workers/: add_to_vector_index.py  execute_table_prompt.py  vectorizer.py
backend.llamaindex/workers/vectorizer/: main.py
backend.llamaindex/workflows/add_to_vector_index/: __init__.py  vectorize.py  workflow.py
backend.llamaindex/workflows/execute_table_prompt/: execute_table_prompt.py  workflow.py
backend.llamaindex/workflows/vectorizer/: vectorize.py  workflow.py
backend.workflows/: .env.dev  README.md  configuration.json  package-lock.json  package.json  tsconfig.json
bosca/: Dockerfile  package.json  pnpm-lock.yaml
cli/: go.mod  go.sum
clients/python/: README.md  bosca_pb2.py  bosca_pb2_grpc.py  pyproject.toml
clients/python/bosca/: empty_pb2.py  empty_pb2_grpc.py  requests_pb2.py  requests_pb2.pyi  requests_pb2_grpc.py
clients/python/bosca/ai/: ai_pb2.py  ai_pb2.pyi  ai_pb2_grpc.py  pending_embedding_pb2.py  pending_embedding_pb2.pyi  pending_embedding_pb2_grpc.py  table_pb2.py  table_pb2.pyi  table_pb2_grpc.py  vector_pb2.py  vector_pb2.pyi  vector_pb2_grpc.py
clients/python/bosca/content/: collections_pb2.py  collections_pb2.pyi  collections_pb2_grpc.py  content_pb2.py  content_pb2.pyi  content_pb2_grpc.py  items_pb2.py  items_pb2.pyi  items_pb2_grpc.py  metadata_pb2.py  metadata_pb2.pyi  metadata_pb2_grpc.py  model_pb2.py  model_pb2.pyi  model_pb2_grpc.py  permissions_pb2.py  permissions_pb2.pyi  permissions_pb2_grpc.py  prompts_pb2.py  prompts_pb2.pyi  prompts_pb2_grpc.py  sources_pb2.py  sources_pb2.pyi  sources_pb2_grpc.py  storage_systems_pb2.py  storage_systems_pb2.pyi  storage_systems_pb2_grpc.py  traits_pb2.py  traits_pb2.pyi  traits_pb2_grpc.py  url_pb2.py  url_pb2.pyi  url_pb2_grpc.py  workflows_pb2.py  workflows_pb2.pyi  workflows_pb2_grpc.py
clients/python/bosca/jobs/: jobs_pb2.py  jobs_pb2.pyi  jobs_pb2_grpc.py
clients/python/bosca/profiles/: profiles_pb2.py  profiles_pb2.pyi  profiles_pb2_grpc.py
clients/python/bosca/search/: search_pb2.py  search_pb2.pyi  search_pb2_grpc.py
clients/python/bosca/security/: security_pb2.py  security_pb2.pyi  security_pb2_grpc.py
clients/python/google/protobuf/: any_pb2.py  any_pb2_grpc.py  field_mask_pb2.py  field_mask_pb2_grpc.py  timestamp_pb2.py  timestamp_pb2_grpc.py
docker/: Dockerfile  Dockerfile-go  Dockerfile-migration
docker-compose/: docker-compose.yaml
docs/: getting-started.md
workspace/workflow/media-py/: main.py  pyproject.toml
workspace/workflow/video-py/: main.py  pyproject.toml
(+1467 files in other folders)
